# anahit-backend

./: .gitignore  CLAUDE.md  Dockerfile  MANIFEST.in  docker-compose.yml  entrypoint.sh  main.py  manage.py  pyproject.toml  pytest.ini  run_tests.py
.github/workflows/: deploy.yml  test.yml
anahit_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
news_config/: admin.py  api.py  apps.py  models.py  tasks.py
news_config/migrations/: 0001_initial.py  0002_remove_newssearchconfig_domains_and_more.py  0003_newsarticle_source_id_alter_newsarticle_author_and_more.py
tests/: conftest.py  test_admin.py  test_api.py  test_models.py
