[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anahit-backend"
version = "0.1.0"
description = "Django backend for managing news search configurations and articles"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.3",
    "django-ninja>=1.4.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
]
authors = [
    {name = "Anahit Backend Team"}
]
keywords = ["django", "news", "api", "backend"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "freezegun>=1.5.2",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
]

[tool.hatch.build.targets.wheel]
packages = ["anahit_backend", "news_config"]

[tool.hatch.build.targets.sdist]
include = [
    "/anahit_backend",
    "/news_config", 
    "/manage.py",
    "/README.md",
    "/pyproject.toml",
]
exclude = [
    "/.env",
    "/tests",
    "/.git*",
    "/__pycache__",
    "*.pyc",
    "/htmlcov",
    "/.coverage",
    "/coverage.xml",
]
